crates/weft-snapshots/tests/snapshots/json/example-screen.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-screen as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Home",
      "state": "ready"
    },
    "children": [
      {
        "kind": "heading",
        "id": "title",
        "props": {
          "level": 1
        },
        "children": [
          "Welcome back"
        ]
      },
      {
        "kind": "text",
        "id": "intro",
        "children": [
          "Pick up where you left off."
        ]
      }
    ]
  }
}
