crates/weft-snapshots/tests/snapshots/json/example-section.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-section as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Account"
    },
    "children": [
      {
        "kind": "section",
        "id": "profile",
        "props": {
          "label": "Profile"
        },
        "slots": {
          "header": [
            {
              "kind": "heading",
              "id": "profile-title",
              "props": {
                "level": 2
              },
              "children": [
                "Profile"
              ]
            }
          ]
        },
        "children": [
          {
            "kind": "text",
            "id": "bio",
            "children": [
              "Product designer based in Lisbon."
            ]
          }
        ]
      }
    ]
  }
}
