crates/weft-snapshots/tests/snapshots/json/example-select.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-select as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Locale"
    },
    "children": [
      {
        "kind": "select",
        "id": "country",
        "props": {
          "disabled": false,
          "label": "Country",
          "value": {
            "bind": "$.country"
          }
        },
        "on": {
          "change": "profile.update"
        },
        "children": [
          {
            "kind": "option",
            "id": "c-pt",
            "props": {
              "value": "pt"
            },
            "children": [
              "Portugal"
            ]
          },
          {
            "kind": "option",
            "id": "c-es",
            "props": {
              "value": "es"
            },
            "children": [
              "Spain"
            ]
          }
        ]
      }
    ]
  }
}
